--- a/server/core/index.html
+++ b/server/core/index.html
@@ -23,14 +23,11 @@
 </head>
 <body>
     <div id="app"></div>
-    <div id="loader" class="ui active page dimmer">
-        <div class="content">
-            <div class="center">
-                <div class="ui large text loader">
-                    <div class="ui inverted teal header">
-                        Loading...
-                    </div>
-                </div>
+
+    <div id="loader" class="ui active dimmer">
+        <div class="ui large text loader">
+            <div class="ui inverted teal header">
+                Loading...
             </div>
         </div>
     </div>
