--- a/server/core/password-reset.html
+++ b/server/core/password-reset.html
@@ -476,7 +476,7 @@
                             </td>
                           </tr>
                         </table>
-                        <p style="font-size: 16px; line-height: 1.625; color: #51545E; margin: .4em 0 1.1875em;">For security, this request was received from a {{operating_system}} device using {{browser_name}}. If you did not request a password reset, please ignore this email.</p>
+                        <p style="font-size: 16px; line-height: 1.625; color: #51545E; margin: .4em 0 1.1875em;">If you did not request a password reset, please ignore this email.</p>
                         <p style="font-size: 16px; line-height: 1.625; color: #51545E; margin: .4em 0 1.1875em;">Thanks,
                           <br />The Gadget Catalog Team</p>
                         <!-- Sub copy -->
