Add facebook og meta

--- a/server/core/index.html
+++ b/server/core/index.html
@@ -19,6 +19,11 @@
     <meta name="description" content="A react application for cataloging gadgets.">
     <link rel="shortcut icon" href="images/favicon.png">
 
+    <meta property="og:url" content="https://gadget-catalog-io.herokuapp.com/"/>
+    <meta property="og:title" content="Gadget Catalog"/>
+    <meta property="og:description" content="A single page application for cataloging gadgets. Built with react, express, mongodb and much more."/>
+    <meta property="og:image" content="https://res.cloudinary.com/shibbir/image/upload/v1572199793/miscellaneous/blue-desktop-with-laptop-compact-discs.jpg"/>
+
     {{#each cssFiles}}<link rel="stylesheet" href="/{{this}}">{{/each}}
 </head>
 <body>
