Fix sonarcloud reliability issue

--- a/src/modules/core/server/password-reset.html
+++ b/src/modules/core/server/password-reset.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="x-apple-disable-message-reformatting" />
@@ -444,7 +444,7 @@
           <table class="email-content" width="100%" cellpadding="0" cellspacing="0" role="presentation">
             <tr>
               <td class="email-masthead">
-                <a href="https://example.com" class="f-fallback email-masthead_name">
+                <a href="{{origin_url}}" class="f-fallback email-masthead_name">
                 Gadget Catalog
               </a>
               </td>
@@ -468,7 +468,7 @@
                               <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
                                 <tr>
                                   <td align="center">
-                                    <a href="{{url}}" class="f-fallback button button--green" target="_blank">Reset your password</a>
+                                    <a href="{{password_reset_url}}" class="f-fallback button button--green" target="_blank" rel="noopener">Reset your password</a>
                                   </td>
                                 </tr>
                               </table>
@@ -483,7 +483,7 @@
                           <tr>
                             <td>
                               <p class="f-fallback sub">If you’re having trouble with the button above, copy and paste the URL below into your web browser.</p>
-                              <p class="f-fallback sub">{{url}}</p>
+                              <p class="f-fallback sub">{{password_reset_url}}</p>
                             </td>
                           </tr>
                         </table>
